test/tests/compiler/9_functions/valid/no_arguments/variable_shadows_function.plx
pub fn main(none) i32 {
    fn foo(none) i32;

    x: i32 = foo()
    if x > 0 {
        foo: i32 = 3
        x = x + foo
    }
    return x
}

pub fn foo(none) i32 {
    return 4
}
